--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /*Poppins-Regular*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Regular.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
@@ -9,7 +9,7 @@
 /*Poppins-Bold*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Bold.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Bold.ttf');
     font-weight: bold;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
 /*Poppins-ExtraBold*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-ExtraBold.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-ExtraBold.ttf');
     font-weight: bolder;
     font-style: normal;
 }
@@ -25,7 +25,7 @@
 /*Poppins-Light*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Light.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Light.ttf');
     font-weight: lighter;
     font-style: normal;
 }
@@ -33,7 +33,7 @@
 /*Poppins-Italic*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Italic.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Italic.ttf');
     font-weight: normal;
     font-style: italic;
 }
@@ -41,7 +41,7 @@
 /*Poppins-BoldItalic*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-BoldItalic.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-BoldItalic.ttf');
     font-weight: bold;
     font-style: italic;
 }
@@ -49,7 +49,7 @@
 /*Poppins-ExtraBoldItalic*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-ExtraBoldItalic.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-ExtraBoldItalic.ttf');
     font-weight: bolder;
     font-style: italic;
 }
@@ -57,7 +57,7 @@
 /*Poppins-LightItalic*/
 @font-face {
     font-family: Poppins;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-LightItalic.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-LightItalic.ttf');
     font-weight: lighter;
     font-style: italic;
 }
@@ -73,7 +73,7 @@
 /*Merriweather-Regular*/
 @font-face {
     font-family: Merriweather;
-    src: url('//github.com/NiDaAppDev/cv/tree/main/Fonts/Merriweather/Merriweather-Regular.ttf');
+    src: url('github.com/NiDaAppDev/cv/tree/main/Fonts/Merriweather/Merriweather-Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
