--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /*Poppins-Regular*/
 @font-face {
     font-family: Poppins;
-    src: url('https://github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Regular.ttf') format('truetype');
+    src: url('/Fonts/Poppins/Poppins-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -9,7 +9,7 @@
 /*Poppins-Bold*/
 @font-face {
     font-family: Poppins;
-    src: url('https://github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-Bold.ttf') format('truetype');
+    src: url('/Fonts/Poppins/Poppins-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
 /*Poppins-ExtraBold*/
 @font-face {
     font-family: Poppins;
-    src: url('https://github.com/NiDaAppDev/cv/tree/main/Fonts/Poppins/Poppins-ExtraBold.ttf') format('truetype');
+    src: url('/Fonts/Poppins/Poppins-ExtraBold.ttf') format('truetype');
     font-weight: bolder;
     font-style: normal;
 }
